<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">ZPHSchool Emani</string>
    <string name="enter_phone_number" tools:ignore="ExtraTranslation">Phone Number</string>
    <string name="enter_your_name">Name</string>
    <string name="submit">Save</string>
    <string name="todo">ZPH School Logo</string>
    <string name="YearofPass">Select Year of Passing 10th Class</string>
    <string name="alumnBTN">Alumn</string>
    <string name="AnnounceBTN">Announcement</string>
    <string name="NewsBTN">News</string>
    <string name="GalleryBTN">Gallery</string>
    <string name="LocationBTN">Location</string>
    <string name="exit_app">Exit</string>
    <string name="about">About</string>
    <string name="menu_Help">Help</string>
    <string name="ContentDescription">ZPHS Images</string>
    <string name="AddNewsPost">Add News Post</string>
    <string name="AddAnnouncement">Add Announcement</string>
    <string name="tvaddAnnouncement">Add Your Announcement</string>
    <string name="newspost_hint_description">Add Description of your news post</string>
    <string name="newspost_hint_title">Add Title</string>
    <string name="newspost_submit_btn_label">Post</string>


    <string-array name="spin_SSC_year_values">
        <item>Choose Year of Passing SSC</item>
        <item>2018</item>
        <item>2017</item>
        <item>2016</item>
        <item>2015</item>
        <item>2014</item>
        <item>2013</item>
        <item>2012</item>
        <item>2011</item>
        <item>2010</item>
        <item>2009</item>
        <item>2008</item>
        <item>2007</item>
        <item>2006</item>
        <item>2005</item>
        <item>2004</item>
        <item>2003</item>
        <item>2002</item>
        <item>2001</item>
        <item>2000</item>
        <item>1999</item>
        <item>1998</item>
        <item>1997</item>
        <item>1996</item>
        <item>1995</item>
        <item>1994</item>
        <item>1993</item>
        <item>1992</item>
        <item>1991</item>
        <item>1990</item>
        <item>1989</item>
        <item>1988</item>
        <item>1987</item>
        <item>1986</item>
        <item>1985</item>
        <item>1984</item>
        <item>1983</item>
        <item>1982</item>
        <item>1981</item>
        <item>1980</item>
        <item>1979</item>
        <item>1978</item>
        <item>1977</item>
        <item>1976</item>
        <item>1975</item>
        <item>1974</item>
        <item>1973</item>
        <item>1972</item>
        <item>1971</item>
        <item>1970</item>
        <item>1969</item>
        <item>1968</item>
        <item>1967</item>
        <item>1966</item>
        <item>1965</item>
        <item>1964</item>
        <item>1963</item>
        <item>1962</item>
        <item>1961</item>
        <item>1960</item>
        <item>1959</item>
        <item>1958</item>
        <item>1957</item>
    </string-array>

    <string name="title_activity_fullscreen">News Home</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="postnews_head">    Post Your News</string>
    <string name="post_your_news">Post Your News</string>
    <string name="post_news_serial">enter serial for News</string>
    <string name="post_announce_serial">enter serial for Announcement</string>
    <string name="post_your_announcements">Post Your Announcements</string>
    <string name="ImageButton_Add">Adding image</string>
    <string name="ann_hint_description">Add Announcement description</string>
    <string name="ann_hint_title">Add Title of your announcement</string>
    <string name="post_news_texthead">*********Post Your News**********</string>
    <string name="nc_text_title">News card</string>
    <string name="tv_nc_description">view news description</string>
    <string name="appbar_scrolling_view_behavior">appbar_scrolling_view_behavior</string>
    <string name="profile_home_wall">zphschool_Assembly</string>
    <string name="profile_name">Your Name</string>
    <string name="alumn_map">Alumn Map</string>
    <string name="title_activity_mapview">Map</string>
</resources>
