<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.rajesh.zphschoolemani.MainActivity"
    tools:ignore="MissingDefaultResource">


    <Button
        android:id="@+id/toolMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/about"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.092"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.944"
        tools:ignore="MissingConstraints" />
    <item
        android:id="@+id/menu_add_newspost"
        android:orderInCategory="102"
        android:title="@string/AddNewsPost" />
    <item
        android:id="@+id/menu_add_announcement"
        android:orderInCategory="103"
        android:title="@string/AddAnnouncement" />
    <item
        android:id="@+id/menu_Help"
        android:orderInCategory="104"
        android:title="@string/menu_Help" />
    <item
        android:id="@+id/menu_About"
        android:orderInCategory="105"
        android:title="@string/about" />
    <item
        android:id="@+id/menu_Exit"
        android:checkable="false"
        android:enabled="true"
        android:orderInCategory="106"
        android:title="@string/exit_app"
        android:visible="true" />
</menu>
