<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/image_bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alpha="0.86"
    android:background="@drawable/maingate_dark"

    tools:context="com.rajesh.zphschoolemani.MainActivity">

    <ImageButton
        android:id="@+id/ib_alumn"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:adjustViewBounds="false"
        android:contentDescription="@string/alumnBTN"
        android:background="@drawable/roundcorner"
        android:padding="5dp"
        android:layout_alignParentTop="true"
        android:scaleType="fitStart"
        android:visibility="visible"

        app:layout_constraintBottom_toTopOf="@+id/ib_news"
        app:layout_constraintEnd_toStartOf="@+id/ib_announcement"
        app:layout_constraintHorizontal_bias="0.271"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/alumni_menu" />

    <ImageButton
        android:id="@+id/ib_announcement"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginEnd="72dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/AnnounceBTN"
        android:background="@drawable/roundcorner"
        android:padding="5dp"
        android:scaleType="fitStart"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/announcement"
        android:layout_marginRight="72dp" />

    <ImageButton
        android:id="@+id/ib_news"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginBottom="208dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="28dp"
        android:background="@drawable/roundcorner"
        android:contentDescription="@string/NewsBTN"
        android:padding="5dp"
        android:scaleType="fitStart"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ib_gallery"
        app:layout_constraintHorizontal_bias="0.115"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/menu_news"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="28dp" />

    <ImageButton
        android:id="@+id/ib_gallery"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="64dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/roundcorner"
        android:contentDescription="@string/GalleryBTN"
        android:padding="5dp"
        android:scaleType="fitStart"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ib_announcement"
        app:layout_constraintVertical_bias="0.261"
        app:srcCompat="@drawable/gallery_menu"
        android:layout_marginRight="64dp" />

    <ImageButton
        android:id="@+id/ib_Location"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/roundcorner"
        android:contentDescription="@string/GalleryBTN"
        android:padding="5dp"
        android:scaleType="fitStart"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ib_news"
        app:layout_constraintVertical_bias="0.474"
        app:srcCompat="@drawable/location_menu" />
</android.support.constraint.ConstraintLayout>
